fixed missing title on homepage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     filename: index.html
     -->
     <meta charset="utf-8">
-    <title></title>
+    <title>Home - Howard's Lakeside General Store</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
