fixed various issues

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>Facebook Group</h2>
         <p>Join our facebook group with the button below!</p>
         <br>
-        <a style="margin-bottom: 200px;" class="button" href="#">Facebook</a>
+        <a class="button" href="#">Facebook</a>
       </div>
     </div>
 
